2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (cb_details_response), (cb_show_details):
	now we parse the entire glade file at startup, there's no need to
	reparse it for the font details dialog

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): update button name, declare
	variables at beginning of block
	* appearance.glade: fix button group assignment (again)

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_free): don't leak the WPItems

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (themes_init), (theme_changed_func),
	(theme_selection_changed_cb), (theme_custom_cb):
	- Sort metathemes icon view
	- Apply theme on selection change
	- Use theme name rather than display name to apply theme

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-main.c: (init_appearance_data):
	* appearance-themes.c: (themes_init), (theme_activated_cb):
	* appearance.glade:

	Move style tab into new window

2007-05-13  Denis Washington  <denisw@svn.nome.org>

	* appearance.glade: fixed a small mistake in Jens' last commit.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: fix font rendering button group assignment,
	rename Preferences tab to Interface

2007-05-13  Denis Washington  <denisw@svn.nome.org>

	* gnome-wp-item.c: Made thumbnails in Desktop tab a bit smaller.

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance.glade: Change "Desktop" tab label to "Background"

2007-05-12  Denis Washington  <denisw@svn.nome.org>

	* appearance-desktop.c: Changed the icon view's selection mode to
	GTK_SELECTION_BROWSE, fixed scrolling to the currently active
	background after the icon view is realized, and two other minor
	fixes.

2007-05-12  Denis Washington  <denisw@svn.nome.org>

	* appearance-desktop.c: (wp_remove_wallpaper):
	gtk_icon_view_set_cursor() => gtk_icon_view_select_path()

2007-05-12  Denis Washington  <denisw@svn.nome.org>
