@@ -1,3 +1,8 @@
+2007-05-13  Thomas Wood  <thos@gnome.org>
+
+	* appearance-themes.c: (themes_init), (theme_changed_func): Use asynchronous
+	methods to generate thumbnails.
+
 2007-05-13  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-font.c: (cb_details_response), (cb_show_details):
